gitops/netalertx/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netalertx
  labels:
    # Allow syncthing to use hostnetwork for it's Local LAN Discovery
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/version: latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netalertx
  namespace: netalertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netalertx
  template:
    metadata:
      labels:
        app: netalertx
    spec:
      # initContainers:
      # - name: litestream-restore
      #   image: litestream/litestream:0.5.2
      #   args:
      #   - 'restore'
      #   - '-if-db-not-exists'
      #   - '-if-replica-exists'
      #   - /data/db.sqlite3
      #   volumeMounts:
      #   - name: netalertx-data
      #     mountPath: /data
      #   - name: litestream-config
      #     mountPath: /etc/litestream.yml
      #     subPath: litestream.yml
      #   env:
      #   - name: LITESTREAM_ACCESS_KEY_ID
      #     valueFrom:
      #       secretKeyRef:
      #         name: common-secrets
      #         key: s3_accesskey
      #   - name: LITESTREAM_SECRET_ACCESS_KEY
      #     valueFrom:
      #       secretKeyRef:
      #         name: common-secrets
      #         key: s3_secretkey
        # securityContext:
      #     capabilities:
      #       drop:
      #       - ALL
      #     runAsUser: 1000
      #     runAsGroup: 1000
      #     runAsNonRoot: true
      #     privileged: false
      #     readOnlyRootFilesystem: true

      containers:
      - name: netalertx
        image: ghcr.io/jokob-sk/netalertx:25.11
        ports:
        - name: http
          containerPort: 20211
        - name: graphql
          containerPort: 20212
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_ADMIN
            - NET_RAW
            - NET_BIND_SERVICE
          # runAsUser: 20211
          # runAsGroup: 20211
          # runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: netalertx-config
          mountPath: /data/config
        - name: netalertx-db
          mountPath: /data/db
        - name: netalertx-tmp
          mountPath: /tmp

      # Litestream
      # - name: litestream
      #   image: litestream/litestream:0.5.2
      #   args:
      #   - 'replicate'
      #   volumeMounts:
      #   - name: netalertx-data
      #     mountPath: /data
      #   - name: litestream-config
      #     mountPath: /etc/litestream.yml
      #     subPath: litestream.yml
      #   env:
      #   - name: LITESTREAM_ACCESS_KEY_ID
      #     valueFrom:
      #       secretKeyRef:
      #         name: common-secrets
      #         key: s3_accesskey
      #   - name: LITESTREAM_SECRET_ACCESS_KEY
      #     valueFrom:
      #       secretKeyRef:
      #         name: common-secrets
      #         key: s3_secretkey
      #   ports:
      #   - name: metrics
      #     containerPort: 9090
      #   securityContext:
      #     capabilities:
      #       drop:
      #       - ALL
      #     runAsUser: 1000
      #     runAsGroup: 1000
      #     runAsNonRoot: true
      #     privileged: false
      #     readOnlyRootFilesystem: true
      # resources:
      #   requests:
      #     cpu: 100m
      #     memory: 1024M
      #   limits:
      #     memory: 2048M
      securityContext:
        runAsUser: 0
        runAsGroup: 20211
        runAsNonRoot: true
        # fsGroup: 20211
        supplementalGroups:
          - 20211
          - 20212

      hostNetwork: true
      volumes:
      - name: netalertx-data
        # emptyDir: {}
        persistentVolumeClaim:
          claimName: netalertx-pvc

      - name: netalertx-config
        emptyDir: {}
      - name: netalertx-db
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: netalertx-pvc
      - name: netalertx-tmp
        emptyDir: {}
      # - name: litestream-config
      #   configMap:
      #     name: litestream-config

---
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  namespace: netalertx
spec:
  selector:
    app: netalertx
  ports:
  - name: http
    port: 20211
    targetPort: http
  - name: graphql
    port: 20212
    targetPort: graphql
  type: ClusterIP

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: netalertx-ingress
#   namespace: netalertx
# spec:
#   tls:
#   - hosts:
#     - network.buc.sh
#     secretName: cert-network-buc-sh
#   rules:
#     - host: network.buc.sh
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: netalertx
#                 port:
#                   name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx-http
  namespace: netalertx
spec:
  rules:
    - host: network.10.0.0.21.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netalertx
                port:
                  name: http
